--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,4 +1,4 @@
 <hr>
 <div>
-    <p>&copy; CualBondi.com.ar 2009 - 2013 Todos los derechos reservados.</p>
+    <p style="text-align:center;">&copy; <a href="mailto:contacto@cualbondi.com.ar">CualBondi</a> 2009 - 2014 Todos los derechos reservados.</p>
 </div>
