--- a/templates/core/ver_recorrido.html
+++ b/templates/core/ver_recorrido.html
@@ -21,8 +21,11 @@
         <li><a href="/{{ciudad_actual.slug}}/{{linea_actual.slug}}">{{linea_actual.nombre}}</a> <span class="divider">&gt;</span></li>
         <li class="active">{{recorrido_actual.nombre}} {% if recorrido_actual.inicio and recorrido_actual.fin %}(de {{recorrido_actual.inicio}} a {{recorrido_actual.fin}}){% endif %}</li>
     </ul>
-
-    <h1>Recorrido {{linea_actual.nombre}} {{recorrido_actual.nombre}} de {{ciudad_actual.nombre}}</h1>
+    
+    <div>
+        <h1 style="display:inline;">Recorrido {{linea_actual.nombre}} {{recorrido_actual.nombre}} de {{ciudad_actual.nombre}}</h1>
+        <div style="vertical-align: super;margin-left: 10px;" class="fb-like" data-layout="button" data-action="like" data-show-faces="false" data-share="false"></div>
+    </div>
     {% if recorrido_actual.inicio and recorrido_actual.fin %}<h3>desde {{recorrido_actual.inicio}} hasta {{recorrido_actual.fin}}</h3>{% endif %}
 
     {% if recorrido_actual.img_panorama %}
