--- a/templates/editor/moderacion_id.html
+++ b/templates/editor/moderacion_id.html
@@ -3,8 +3,8 @@
 <head>
     <title>Editor de Cualbondi</title>
 
-    <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.6.2/leaflet.css" />
-    <script src="http://cdn.leafletjs.com/leaflet-0.6.2/leaflet.js"></script>
+    <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.2/leaflet.css" />
+    <script src="http://cdn.leafletjs.com/leaflet-0.7.2/leaflet.js"></script>
 
     <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
 
@@ -13,10 +13,39 @@
 <body>
     <div id="map" style="position: absolute; top: 0; right: 0; width: 50%; height: 100%;"></div>
 
-    <script>
+    <h3>Original</h3>
+    <table>
+        {% with original as e %}
+        <tr>
+            <td><a href="{% url apps.editor.views.moderar_ediciones_id id=e.id %}">{{ e.linea.nombre }} - {{ e.nombre }}</a></td>
+        </tr>
+        {% endwith %}
+    </table>
 
-        // jquery.cookie.js
-        (function(d){"function"===typeof define&&define.amd?define(["jquery"],d):d(jQuery)})(function(d){function n(a){return a}function p(a){return decodeURIComponent(a.replace(k," "))}function l(a){0===a.indexOf('"')&&(a=a.slice(1,-1).replace(/\\"/g,'"').replace(/\\\\/g,"\\"));try{return e.json?JSON.parse(a):a}catch(c){}}var k=/\+/g,e=d.cookie=function(a,c,b){if(void 0!==c){b=d.extend({},e.defaults,b);if("number"===typeof b.expires){var g=b.expires,f=b.expires=new Date;f.setDate(f.getDate()+g)}c=e.json?JSON.stringify(c):String(c);return document.cookie=[e.raw?a:encodeURIComponent(a),"=",e.raw?c:encodeURIComponent(c),b.expires?"; expires="+b.expires.toUTCString():"",b.path?"; path="+b.path:"",b.domain?"; domain="+b.domain:"",b.secure?"; secure":""].join("")}c=e.raw?n:p;b=document.cookie.split("; ");for(var g=a?void 0:{},f=0,k=b.length;f<k;f++){var h=b[f].split("="),m=c(h.shift()),h=c(h.join("="));if(a&&a===m){g=l(h);break}a||(g[m]=l(h))}return g};e.defaults={};d.removeCookie=function(a,c){return void 0!==d.cookie(a)?(d.cookie(a,"",d.extend({},c,{expires:-1})),!0):!1}});
+    <h3>Derivaciones</h3>
+    <div id="info" style="background:#EAA"></div>
+    <table>
+        {% for e in ediciones %}
+        <tr>
+            <td><a href="{% url apps.editor.views.moderar_ediciones_uuid uuid=e.uuid %}">uuid</a></td>
+            <td>
+                <table>
+                    {% for m in e.log %}
+                    <tr>
+                        <td>{{ m.date_create|date:"d/m/Y H:i" }}</td>
+                        <td>{{ m.created_by }}</td>
+                        <td>{{ m.get_newStatus_display }}</td>
+                    </tr>
+                    {% endfor %}
+                </table>
+            </td>
+            <td><a href="{% url apps.editor.views.moderar_ediciones_uuid_aprobar uuid=e.uuid %}?next={{ request.path }}">Aprobar</a></td>
+        </tr>
+        {% endfor %}
+    </table>
+
+    <script>
+        {% include "editor/dependencias.js" %}
 
         // Load map and base layer
         var osmUrl='http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png';
@@ -32,18 +61,31 @@
         var diffItems = new L.FeatureGroup();
         map.addLayer(diffItems);
 
+        function loadpoly(linestring) {
+            points = [];
+            for ( var i = 0; i < linestring.coordinates.length; i++ ) {
+                e = linestring.coordinates[i]
+                points.push([e[1],e[0]])
+            }
+            linestring = L.polyline(points)
+            linestring.setStyle({opacity: 0.5, color: '#606'})
+            list.push(linestring)
+            drawnItems.addLayer(linestring);
+            L.polylineDecorator(linestring, {
+                    patterns: [
+                        {offset: '0%', repeat: 150, symbol: L.Symbol.arrowHead({pixelSize: 15, polygon: false, pathOptions: {stroke: true}})}
+                    ]
+                }).addTo(map);
+            return linestring;
+        }
+         
         // Load the linestring
         var list = []
         {% for e in ediciones %}
-            linestring = L.GeoJSON.geometryToLayer({{ e.ruta.geojson|safe }})
-            linestring.setStyle({opacity: 0.5, color: '#606'})
-            list.push(linestring)
-            drawnItems.addLayer(linestring);        
+            loadpoly({{ e.ruta.geojson|safe }});
         {% endfor %}
         
-        linestring = L.GeoJSON.geometryToLayer({{ original.ruta.geojson|safe }})
-        linestring.setStyle({opacity: 0.5, color: '#666'})
-        drawnItems.addLayer(linestring);
+        var linestring = loadpoly({{ original.ruta.geojson|safe }})
 
          /*/// tratando de hacer un diff entre polilineas
         for ( var i = 0; i < list.length; i++) {
@@ -59,6 +101,7 @@
         }
          ///*///
         
+        var lengthdiff = false;
         var ps = []
         for ( var i = 0; i < list.length; i++) {
             var l = list[i];
@@ -77,6 +120,12 @@
                     diffItems.addLayer(L.marker(p))
                 }
             }
+            if ( l._latlngs.length != linestring._latlngs.length )
+                lengthdiff = true;
+            if ( ! l._latlngs[0].equals(linestring._latlngs[0]) )
+                diffItems.addLayer(L.marker(l._latlngs[0]))
+            if ( ! l._latlngs[l._latlngs.length-1].equals(linestring._latlngs[linestring._latlngs.length-1]) )
+                diffItems.addLayer(L.marker(l._latlngs[l._latlngs.length-1]))
             /*
             var pl;
             if ( ps.length == 1 ) {
@@ -90,7 +139,10 @@
             */
         }
         
-        if ( ps.length == 0 ) alert('no hay diferencias con el original');
+        var html = '';
+        if ( lengthdiff ) html += 'El recorrido tiene distinta cantidad de nodos';
+        if ( ps.length == 0 ) html += '<br> No hay diferencias con el original';
+        L.DomUtil.get('info').innerHTML = html;
          
         function guardarRecorrido() {
             try { jqxhrSave.cancel() } catch(err) {}
@@ -125,38 +177,6 @@
 
 
     </script>
-
-
-    <h3>Original</h3>
-    <table>
-        {% with original as e %}
-        <tr>
-            <td><a href="{% url apps.editor.views.moderar_ediciones_id id=e.id %}">{{ e.linea.nombre }} - {{ e.nombre }}</a></td>
-        </tr>
-        {% endwith %}
-    </table>
-
-    <h3>Derivaciones</h3>
-    <table>
-        {% for e in ediciones %}
-        <tr>
-            <td><a href="{% url apps.editor.views.moderar_ediciones_uuid uuid=e.uuid %}">uuid</a></td>
-            <td>
-                <table>
-                    {% for m in e.log %}
-                    <tr>
-                        <td>{{ m.date_create|date:"d/m/Y H:i" }}</td>
-                        <td>{{ m.created_by }}</td>
-                        <td>{{ m.get_newStatus_display }}</td>
-                    </tr>
-                    {% endfor %}
-                </table>
-            </td>
-            <td><a href="{% url apps.editor.views.moderar_ediciones_uuid_aprobar uuid=e.uuid %}?next={{ request.path }}">Aprobar</a></td>
-        </tr>
-        {% endfor %}
-    </table>
-
-
+    
 </body>
 </html>
