--- a/templates/editor/editor_recorrido.html
+++ b/templates/editor/editor_recorrido.html
@@ -1,7 +1,6 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Editor de Cualbondi</title>
+{% extends "base.html" %}
+
+{% block custom_styles %}
 
     <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.2/leaflet.css" />
     <link rel="stylesheet" href="http://leaflet.github.com/Leaflet.draw/leaflet.draw.css" />
@@ -12,13 +11,25 @@
     <script src="http://cdn.leafletjs.com/leaflet-0.7.2/leaflet.js"></script>
     <script src="http://leaflet.github.com/Leaflet.draw/leaflet.draw.js"></script>
 
-    <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
-
-    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.4/jquery.fancybox.pack.js"></script>
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.4/jquery.fancybox.css" type="text/css" media="screen" />
 
     <style media="screen" type="text/css">
         invalid-data { border: 1px solid red; }
+        .leaflet-draw-actions a {
+            background-color: #3A87AD;;
+        }
+        .leaflet-draw-actions a:hover {
+            background-color: #5AA7CD;;
+        }
+        .leaflet-draw-actions li:last-child {
+            display: none;
+        }
+        .fancybox-outer {
+            text-align: center;
+        }
+        .fancybox-outer img {
+            cursor: pointer;
+        }
     </style>
     
     <div id="fb-root"></div>
@@ -42,18 +53,76 @@
          fjs.parentNode.insertBefore(js, fjs);
        }(document, 'script', 'facebook-jssdk'));
     </script>
-    
-</head>
-<body>
-    <div id="title" style="position: absolute; top: 0; left: 0; right: 0; height: 60px;">
-        <h2 style="display: inline; margin-bottom: 4px;">Cualbondi Editor Beta.</h2>
-        <h3 style="display: inline; margin-bottom: 4px;">{{ recorrido.linea.ciudad_set.all.0.nombre }} {{ recorrido.linea.nombre }} {{ recorrido.nombre }}</h3>
-        <p style="margin-top:2px;">Los cambios que realices serán aprobados por un moderador. Gracias por colaborar {{ user }}!</p>
+{% endblock %}
+
+{% block navbar %}
+    <div class="navbar navbar-fixed-top navbar-inverse" style="z-index:30;">
+        <div class="navbar-inner">
+            <div class="container">
+                <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </a>
+                <a class="brand" href="/" style="background:url({{ STATIC_URL }}img/logo-navbar.png); height:25px; width:132px; padding:0; margin: 5px 20px 0 0;"></a>
+                <div class="nav-collapse">
+                    <ul class="nav">
+                        <li><a href>Editor Beta: {{ recorrido.linea.ciudad_set.all.0.nombre }} {{ recorrido.linea.nombre }} {{ recorrido.nombre }}</a></li>
+                        <li><a href></a></li>
+                    </ul>
+                    <ul class="nav pull-right">
+                        <li><a href="" onclick="return abrirAyuda()"> Ayuda</a></li>
+                        <li><a href="https://spreadsheets.google.com/spreadsheet/viewform?formkey=dFJERlREQjUyaE1iSkFDYnhOa2Nnbmc6MQ+"> Encuesta</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
     </div>
-    <div id="map" style="position: absolute; top: 60px; left: 0; right: 0; bottom: 0;"></div>
+{% endblock %}
 
+{% block content %}
+    <div id="alerts" style="z-index: 2040; position: absolute; top: 50px; left: 45px; right: 10px;">
+        <div class="alert alert-info">
+            <button type="button" class="close" data-dismiss="alert">&times;</button>
+            <strong>Para comenzar</strong> mové los cuadrados y al terminar hacé click en guardar. Gracias por colaborar {{ user }}!
+        </div>
+    </div>
+    <div id="map" style="position: absolute; top: 40px; left: 0; right: 0; bottom: 0;"></div>
+
+    <!-- Modal -->
+    <div id="modalayuda" class="modal hide fade" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+            <h3 id="myModalLabel">Ayuda</h3>
+        </div>
+        <div class="modal-body">
+            <p>Para editar el recorrido arrastrá los cuadrados blancos (nodos).</p>
+            <p>Para agregar nodos, hacé click sobre los cuadrados semitransparentes y arrstrálos a la posición que quieras.</p>
+            <p>Cuando termines de editar, presioná el botón guardar que se encuentra arriba a la izquierda del mapa.</p>
+            <p>Te agradecemos mucho tu interés en mejorar la calidad de la infromación.</p>
+        </div>
+        <div class="modal-footer">
+            <button class="btn btn-primary" data-dismiss="modal" aria-hidden="true">Cerrar</button>
+        </div>
+    </div>
+{% endblock %}
+
+{% block custom_scripts %}
     <script>
-
+        $("#alertGuardado").hide();
+        function abrirAyuda(){
+            piwikLog("editor/ayuda");
+            $('#modalayuda').modal();
+            return false;
+        }
+        
+        function addAlert(message, type) {
+            $('#alerts').append(
+                '<div class="alert '+ (type || '') + '">' +
+                    '<button type="button" class="close" data-dismiss="alert">' +
+                    '&times;</button>' + message + '</div>');
+        }
+        
         {% include "editor/dependencias.js" %}
         
         L.drawLocal.draw.toolbar.actions.title="Cancelar Dibujo"
@@ -80,15 +149,15 @@
         L.drawLocal.edit.toolbar.actions.cancel.text="Cancelar"
         L.drawLocal.edit.toolbar.buttons.edit="Editar trazado"
         //L.drawLocal.edit.toolbar.buttons.remove="Delete layers"
-        L.drawLocal.edit.handlers.edit.tooltip.text="Click en Guardar al terminar."
-        L.drawLocal.edit.handlers.edit.tooltip.subtext="Arrastra los cuadrados!";
+        //L.drawLocal.edit.handlers.edit.tooltip.text="Click en Guardar al terminar."
+        //L.drawLocal.edit.handlers.edit.tooltip.subtext="Arrastra los cuadrados!";
         //L.drawLocal.edit.handlers.remove.tooltip.text="Click on a feature to remove"
 
         // Load map and base layer
         var osmUrl='http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png';
         var osmAttrib='Map data © Cualbondi & <a href="http://openstreetmap.org">OpenStreetMap</a> contributors';
         var osm = new L.TileLayer(osmUrl, {minZoom: 8, maxZoom: 19, attribution: osmAttrib});
-        var map = new L.Map('map', {layers: [osm], center: new L.LatLng(-37.7772, 175.2756), zoom: 15 });
+        var map = new L.Map('map', {layers: [osm], center: new L.LatLng(-37.7772, 175.2756), zoom: 15, drawControlTooltips: false});
 
         // Create layer to edition
         var drawnItems = new L.FeatureGroup();
@@ -99,11 +168,12 @@
         linestring.setStyle({opacity: 1})
         drawnItems.addLayer(linestring);
         // set arrows
-        L.polylineDecorator(linestring, {
+        var flechas = L.polylineDecorator(linestring, {
                 patterns: [
-                    {offset: '0%', repeat: 150, symbol: L.Symbol.arrowHead({pixelSize: 15, polygon: false, pathOptions: {stroke: true}})}
+                    {offset: '0%', repeat: 150, symbol: L.Symbol.arrowHead({pixelSize: 15, polygon: false, pathOptions: {color: '#00A', opacity: 1, stroke: true}})}
                 ]
-            }).addTo(map);
+            })
+        flechas.addTo(map);
 
         // Draw control options
         var drawControl = new L.Control.Draw({
@@ -132,7 +202,7 @@
                         stroke: true,
                         color: '#0000AA',
                         weight: 5,
-                        opacity: 0.5
+                        opacity: 1
                         //,dashArray: "10,10"
                         }
                     },
@@ -160,13 +230,13 @@
                     },
                 "headers": {"X-CSRFToken": $.cookie('csrftoken') }
             }).done(function(data, textStatus, jqXHR){
-                console.log(200)
+                //console.log(200)
                 // login success
                 authenticated = true
                 $.fancybox.close();
                 guardarRecorrido()
             }).fail(function(data, textStatus, jqXHR){
-                console.log("otro" )
+                //console.log("otro" )
                 // error login
                 $("#user").addClass("invalid-data");
                 $("#pass").addClass("invalid-data");
@@ -176,6 +246,7 @@
         
         var token = null;
         function loginFB(){
+            piwikLog("editor/loginFB");
             FB.login(
                 function(response) {
                     if (response.authResponse) {
@@ -198,20 +269,20 @@
                                 //}
                             }
                         ).done(function(data, textStatus, jqXHR){
-                            console.log(200)
+                            //console.log(200)
                             // login success
                             authenticated = true
                             $.fancybox.close();
                             guardarRecorrido()
                         }).fail(function(data, textStatus, jqXHR){
-                            console.log("otro" )
+                            //console.log("otro" )
                             // error login
                             $("#user").addClass("invalid-data");
                             $("#pass").addClass("invalid-data");
                             authenticated = false
                         })
                     } else {
-                        console.log('User cancelled login or did not fully authorize.');
+                        //console.log('User cancelled login or did not fully authorize.');
                     }
                 },
                 { scope: 'email' }
@@ -221,8 +292,7 @@
         
         function openLogin() {
             $.fancybox({
-                content: 'Hola, necesitamos que realices el login via facebook para poder guardar tu progreso en cualbondi <br /><button onclick="loginFB()">Facebook Login!</button> Pronto agregaremos mas funcionalidades. Muchas gracias por tu aporte!'
-                //content: '<input id="user" placeholder="User"><br><input id="pass" placeholder="Password" type="password"><br><button onclick="$.fancybox.close()">Cerrar!</button><button onclick="login()">Login!</button>'
+                content: 'Gracias por tu edición!<br /><br />Ahora solo necesitamos que realices el login via facebook para poder guardar<br /><img onclick="loginFB()" src="{{STATIC_URL}}/img/loginfb.jpg"><br /><br />No te preocupes si tu edición no es perfecta, ya que deberá ser revisada por un moderador<br />Pronto agregaremos muchas mas funcionalidades.<br /><br />Muchas gracias por tu aporte!'
             });        
         }
 
@@ -249,19 +319,21 @@
             })
             .done(function(data) {
                 uuid = JSON.parse(data).uuid;
-                console.log(uuid)
+                addAlert("<strong>Gracias!</strong> La edición fue guardada y será aceptada por un moderador.", "alert-success")
+                //console.log(uuid)
             })
             .fail(function(jqXHR) {
                 if ( ! $.fancybox.isOpen )
                     openLogin();
                 uuid = JSON.parse(jqXHR.responseText).uuid;
-                console.log(uuid)
+                //console.log(uuid)
             })
         }
 
         var jqxhrSave
         // Guardar con estado saved en la base de datos via POST ajax
         map.on('draw:edited', function (e) {
+            piwikLog("editor/guardar");
             if ( !authenticated ) {
                 guardarRecorrido(true)
                 openLogin()            
@@ -269,22 +341,49 @@
             }
             else
                 guardarRecorrido()
-
+        });
+        
+        linestring.on('edit', function(e) {
+            console.log('lineedit')
+            map.removeLayer(flechas);
+            flechas = L.polylineDecorator(linestring, {
+                patterns: [
+                    {offset: '0%', repeat: 150, symbol: L.Symbol.arrowHead({pixelSize: 15, polygon: false, pathOptions: {color: '#00A', opacity: 1, stroke: true}})}
+                ]
+            })
+            flechas.addTo(map);
+        })
+        
+        map.on('draw:editstop', function (e) {
+            setTimeout(enableEdit, 100);
+        });
+        
+        map.on('draw:drawstart', function (e) {
+            console.log('drawstart')
         });
 
         // Add draw control to map
         map.addControl(drawControl);
 
-        // Enable edit handler hack from https://github.com/Leaflet/Leaflet.draw/issues/129
-        for (var i in drawControl._toolbars)
-            if (typeof drawControl._toolbars[i]._modes.edit != 'undefined')
-                editHandler = drawControl._toolbars[i]._modes.edit.handler;
-        editHandler.enable();
-
+        function enableEdit() {
+            // Enable edit handler hack from https://github.com/Leaflet/Leaflet.draw/issues/129
+            var editHandler;
+            for (var i in drawControl._toolbars) {
+                if (typeof drawControl._toolbars[i]._modes.edit != 'undefined') {
+                    editHandler = drawControl._toolbars[i]._modes.edit.handler;
+                    editHandler.enable();
+                }
+            }
+        }
+        enableEdit();
+        
+        
         // Move map to actual linestring
         map.fitBounds(drawnItems.getBounds());
 
 
     </script>
-</body>
-</html>
+
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.4/jquery.fancybox.pack.js"></script>
+{% include "tracking.html" %}
+{% endblock %}
