Arreglando bloqueo de adblockplus en el mapa

--- a/templates/core/buscador.html
+++ b/templates/core/buscador.html
@@ -147,7 +147,7 @@
 
 <script src="{{ STATIC_URL }}js/jquery.RC4.min.js"></script>
 <script src="{{ STATIC_URL }}js/simple-slider.min.js"></script>
-<script src="//ajax.microsoft.com/ajax/jquery.templates/beta1/jquery.tmpl.min.js"></script>
+<script src="//ajax.aspnetcdn.com/ajax/jquery.templates/beta1/jquery.tmpl.min.js"></script>
 <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.2/leaflet.css" />
 <script src="//cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.2/leaflet.js"></script>
 <script src="{{ STATIC_URL }}js/wicket.js"></script>
