--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,4 +1,18 @@
 <hr>
-<div>
-    <p style="text-align:center;">&copy; <a href="mailto:contacto@cualbondi.com.ar">CualBondi</a> 2009 - 2014 Todos los derechos reservados.</p>
+<div class="container">
+    <div class="row-fluid">
+        {% load bootstrap_tags %}
+        {% load flatpages_list %}
+        {% flatpages_list %}
+        {% for columna_flatpages in flatpages_list|dividir_columnas:1 %}
+        <div id="bloque_izquierda" class="span6"  style="text-align:center;">
+            {% for flatpage in columna_flatpages %}
+                <a href="{{ flatpage.get_absolute_url }}">{{ flatpage.title }}</a>
+            {% endfor %}
+        </div>
+        {% endfor %}
+        <div id="bloque_izquierda" class="span12">
+            <p style="text-align:center;">&copy; <a href="mailto:contacto@cualbondi.com.ar">CualBondi</a> 2009 - 2014 Todos los derechos reservados.</p>
+        </div>
+    </div>
 </div>
