Mejorando estilos del footer

--- a/templates/base.html
+++ b/templates/base.html
@@ -31,7 +31,7 @@
 
         {% block custom_top_scripts %}{% endblock %}
 	</head>
-	<body>
+	<body style="padding-bottom:0">
 
         {% block navbar %}{% endblock %}
 
