--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -31,6 +31,7 @@
         {% endif %}
     </ul>
     <ul class="nav pull-right">
-        <li><a href="https://spreadsheets.google.com/spreadsheet/viewform?formkey=dFJERlREQjUyaE1iSkFDYnhOa2Nnbmc6MQ+"><i class="icon-pencil icon-white"></i> Ayudanos completando la encuesta</a></li>
+        <li><a href="{% url apps.core.views.agradecimientos %}"><i class="icon-star icon-white"></i> Colaboradores</a></li>
+        <li><a href="https://spreadsheets.google.com/spreadsheet/viewform?formkey=dFJERlREQjUyaE1iSkFDYnhOa2Nnbmc6MQ+"><i class="icon-pencil icon-white"></i> Ayudanos: encuesta</a></li>
     </ul>
 </div>
